style: display select color

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: "shimizu";
-  src: url("./fonts/NP_Shimizu.woff2") format("woff2"),
-    url("./fonts/NP_Shimizu.woff") format("woff"),
-    url("./fonts/NP_Shimizu.ttf") format("truetype");
+  font-family: 'shimizu';
+  src: url('./fonts/NP_Shimizu.woff2') format('woff2'),
+    url('./fonts/NP_Shimizu.woff') format('woff'),
+    url('./fonts/NP_Shimizu.ttf') format('truetype');
 }
