--- a/src/components/templates/Top/style.module.scss
+++ b/src/components/templates/Top/style.module.scss
@@ -28,3 +28,9 @@
   justify-content: center;
   padding: 0 0 24px;
 }
+
+.availableFollowingLanguages {
+  font-size: 1.2rem;
+  padding: 32px 0 0;
+  text-align: center;
+}
