--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
 @font-face {
   font-family: 'shimizu';
   src: url('./fonts/NP_Shimizu.woff2') format('woff2'),
